<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            >
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  style="?android:attr/textAppearanceLarge"
                  android:text="@string/header_title"
                  android:textStyle="bold|italic"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="1dp"
                  android:paddingBottom="1dp"/>
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/show_title"
                  style="?android:attr/textAppearanceLarge"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textIsSelectable="true"
                  android:paddingTop="1dp"
                  android:paddingBottom="15dp"
                  tools:context=".ShowDetailFragment"/>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  style="?android:attr/textAppearanceLarge"
                  android:text="@string/header_started"
                  android:textStyle="bold|italic"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="1dp"
                  android:paddingBottom="1dp"/>
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/show_started"
                  style="?android:attr/textAppearanceLarge"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textIsSelectable="true"
                  android:paddingTop="1dp"
                  android:paddingBottom="15dp"
                  tools:context=".ShowDetailFragment"/>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  style="?android:attr/textAppearanceLarge"
                  android:text="@string/header_ended"
                  android:textStyle="bold|italic"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="1dp"
                  android:paddingBottom="1dp"/>
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/show_ended"
                  style="?android:attr/textAppearanceLarge"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textIsSelectable="true"
                  android:paddingTop="1dp"
                  android:paddingBottom="15dp"
                  tools:context=".ShowDetailFragment"/>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  style="?android:attr/textAppearanceLarge"
                  android:text="@string/header_status"
                  android:textStyle="bold|italic"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="1dp"
                  android:paddingBottom="1dp"/>
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/show_status"
                  style="?android:attr/textAppearanceLarge"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textIsSelectable="true"
                  android:paddingTop="1dp"
                  android:paddingBottom="15dp"
                  tools:context=".ShowDetailFragment"/>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  style="?android:attr/textAppearanceLarge"
                  android:text="@string/header_genres"
                  android:textStyle="bold|italic"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="1dp"
                  android:paddingBottom="1dp"/>
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/show_genres"
                  style="?android:attr/textAppearanceLarge"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textIsSelectable="true"
                  android:paddingTop="1dp"
                  android:paddingBottom="15dp"
                  tools:context=".ShowDetailFragment"/>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  style="?android:attr/textAppearanceLarge"
                  android:text="@string/header_image"
                  android:textStyle="bold|italic"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="1dp"
                  android:paddingBottom="1dp"/>
        <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/show_image"
                android:paddingTop="1dp"
                android:paddingBottom="15dp"
                tools:context=".ShowDetailFragment"/>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  style="?android:attr/textAppearanceLarge"
                  android:text="@string/header_link"
                  android:textStyle="bold|italic"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="1dp"
                  android:paddingBottom="1dp"/>
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/show_link"
                  style="?android:attr/textAppearanceLarge"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textIsSelectable="true"
                  android:paddingTop="1dp"
                  android:paddingBottom="15dp"
                  tools:context=".ShowDetailFragment"
                  android:autoLink="web"/>

    </LinearLayout>
</ScrollView>
